staticserver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: rpgmap
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    name: webport
