staticserver/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: rpgmap
spec:
  rules:
  - host: "map.maus.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              name: webport
  tls:
  - secretName: rpgmap-tls
